# workwell

./: .gitignore  ADD_ICON.md  DESIGN_DOCUMENT.md  DEVELOPMENT.md  LICENSE  PROJECT_SUMMARY.md  Package.swift  README.md  Timeout.icns  USAGE.md  WorkWell.icns  add_icon.sh  build.sh  create_icon.sh  create_icon_with_emoji.sh  fix_timer.sh  run.sh  test.sh
.claude/: settings.local.json
Sources/Timeout/: BreakWindow.swift  TimerManager.swift  main.swift
Sources/WorkWell/: BreakWarningWindow.swift  BreakWindow.swift  TimerManager.swift  TimerView.swift  main.swift
workwell-windows/: .gitignore  BUILD_GUIDE.md  CMakeLists.txt  COMPILE_INSTRUCTIONS.md  DEVELOPMENT.md  FIXED.md  NEW_FEATURES.md  README.md  build.bat  build.ps1  build.sh
workwell-windows/src/: BreakWindow.cpp  BreakWindow.h  CMakeLists.txt  ConfigManager.cpp  ConfigManager.h  ICON_README.md  MainDialog.cpp  MainDialog.h  SettingsDialog.cpp  SettingsDialog.h  TimerManager.cpp  TimerManager.h  TrayIcon.cpp  TrayIcon.h  main.cpp  resource.h  resource.rc
